--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,14 +19,12 @@ repos:
   hooks:
     - id: isort
       args: [ "--profile", "black" ]
-- repo: https://github.com/pycqa/flake8
-  rev: 6.1.0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.4.1
   hooks:
-    - id: flake8
-      args:
-        - "--max-line-length=128"
-      exclude: "test_*.*"
-      additional_dependencies:
-        # - flake8-bugbear
-        - flake8-comprehensions
-        - flake8-simplify
+    # Run the linter.
+    - id: ruff
+      args: [ --fix ]
+    # Run the formatter.
+    - id: ruff-format
